305199 m  [381] ARM: implement QDADD and QDSUB
305321 m  [381] amd64->IR: 0xF 0xD 0xC (prefetchw)
305513 m  [381] killed by fatal signal: SIGSEGV
305690 m  [381] DRD reporting invalid semaphore when sem_trywait returns
                EAGAIN or sem_timedwait returns ETIMEDOUT
305926 m  [381] Invalid alignment checks for some AVX instructions
306054    [390] s390x: Condition code computation for convert-to-int/logical
306310    [390] 3.8.0 release tarball missing some files
n-i-bz m  [381] shmat of a segment > 4Gb does not work 
n-i-bz m  [381] simulate_control_c script wrong USR1 sig# on mips
n-i-bz m  [381] vgdb ptrace calls wrong on mips [...]
n-i-bz m  [381] Fixes for more MPI false positives
n-i-bz m  [381] exp-sgcheck's memcpy causes programs to segfault
n-i-bz m  [381] volatile in stack check, re clang
n-i-bz m  [381] Incorrect undef'dness prop for Iop_DPBtoBCD and Iop_BCDtoDPB


Release 3.8.0 (10 August 2012)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.8.0 is a feature release with many improvements and the usual
collection of bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM/Linux, PPC32/Linux,
PPC64/Linux, S390X/Linux, MIPS/Linux, ARM/Android, X86/Android,
X86/MacOSX 10.6/10.7 and AMD64/MacOSX 10.6/10.7.  Support for recent
distros and toolchain components (glibc 2.16, gcc 4.7) has been added.
There is initial support for MacOSX 10.8, but it is not usable for
serious work at present.

* ================== PLATFORM CHANGES =================

* Support for MIPS32 platforms running Linux.  Valgrind has been
  tested on MIPS32 and MIPS32r2 platforms running different Debian
  Squeeze and MeeGo distributions.  Both little-endian and big-endian
  cores are supported.  The tools Memcheck, Massif and Lackey have
  been tested and are known to work. See README.mips for more details.

* Preliminary support for Android running on x86.

* Preliminary (as-yet largely unusable) support for MacOSX 10.8.
